5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1675_2471.log
== SUBMITION (2019-05-02 10:47:21) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>=0)and(age<130)or(imc>=0):
	if(imc<22)and(age<45):
		print("Risco:",Baixo)
	elif(imc<22)and(age>=45):
		print("Risco:",Medio)
	elif(imc>=22)and(age<45):
		print("Risco:",Medio)
	elif(imc>=22)and(age>=45):
		print("Risco:",Alto)
-- EXECUTION TIME:
0.180833
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1675/2471/main.py", line 8, in <module>
    print("Risco:",Baixo)
NameError: name 'Baixo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:47:26) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>=0)and(age<130)or(imc>=0):
	if(imc<22)and(age<45):
		print("Risco:",Baixo)
	elif(imc<22)and(age>=45):
		print("Risco:",Medio)
	elif(imc>=22)and(age<45):
		print("Risco:",Medio)
	elif(imc>=22)and(age>=45):
		print("Risco:",Alto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Risco:",Baixo)
NameError: name 'Baixo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:48:31) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>=0)and(age<130)or(imc>=0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
-- OUTPUT:
entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:48:46) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>=0)and(age<130)or(imc>=0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
-- EXECUTION TIME:
0.178619
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
entradas: 0 anos e IMC 0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:49:58) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>=0)and(age<130)or(imc>=0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.130138
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
entradas: 0 anos e IMC 0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:50:01) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>=0)and(age<130)or(imc>=0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:50:08) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>=0)and(age<130)or(imc>=0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:50:39) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>=0)and(age<130)and(imc>=0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.132478
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
entradas: 0 anos e IMC 0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:50:40) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>=0)and(age<130)and(imc>=0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:51:10) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>=0)and(age<130)and(imc>=0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:51:30) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>=0)and(age<130)and(imc>=0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:52:07) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>0)and(age<130)and(imc>=0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.17474
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:52:08) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>0)and(age<130)and(imc>=0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:52:22) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>0)and(age<130)and(imc>0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.156418
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:52:23) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>0)and(age<130)and(imc>0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:52:34) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>0)and(age<130)and(imc>0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:52:39) 
-- CODE:
age=int(input("entre com a sua idade: "))
imc=float(input("entre com o seu imc: "))
print("entradas:",age,"anos e IMC",imc)


if(age>0)and(age<130)and(imc>0):
	if(imc<22)and(age<45):
		print("Risco: Baixo")
	elif(imc<22)and(age>=45):
		print("Risco: Medio")
	elif(imc>=22)and(age<45):
		print("Risco: Medio")
	elif(imc>=22)and(age>=45):
		print("Risco: Alto")
	else:
		print("Dados invalidos")
else:
	print("Dados invalidos")
	
-- OUTPUT:
entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
